--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.1",
-    "angular": "^1.5.8",
+    "angular": "1.5.8",
     "bootstrap": "^3.3.7",
     "angular-route": "^1.5.8",
     "angular-animate": "^1.5.8",
